# ocaml-gmp

./: .gitignore  CHANGES.md  README.md  dune  dune-workspace.solo5  gmp.opam
.github/workflows/: CI.yml
src/: build.sh  build.sh.in  dune  gcc.15.patch  gmp.install  gmp.opam
test/: dummy_stubs.c  dune
